[project]
name = "abe"
version = "0.1.0"
description = "Abstract Brushes & Entities"
readme = "README.md"
requires-python=">=3.8"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
    {name="snake-biscuits", email="bikkie.dev@gmx.com"}
]
maintainers = [
    {name="snake-biscuits", email="bikkie.dev@gmx.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "ass @ git+http://git@github.com/snake-biscuits/ass.git",
    "breki @ git+http://git@github.com/snake-biscuits/breki.git",
]


[project.optional-dependencies]
# NOTE: install with pip extras syntax:
# -- `$ pip install bsp_tool[test]`
test = ["pytest", "pytest_cov"]


[project.urls]
"Repository" = "https://github.com/Project-Abraham/abe"
"Changelog" = "https://github.com/Project-Abraham/abe/blob/master/CHANGELOG.md"
"Bug Reports" = "https://github.com/Project-Abraham/abe/issues"
"Funding" = "https://ko-fi.com/bikkie"


[build-system]
requires = ["hatchling >= 1.13"]
build-backend = "hatchling.build"


# hatchling config
[tool.hatch.build.targets.sdist]
include = [
    "/abe/*",
    "/tests",
    "/CHANGELOG.md",
]


[tool.hatch.build.targets.wheel]
only-packages = true


[tool.hatch.metadata]
allow-direct-references = true
